Maps commit still need to array the coordinates

--- a/Travel-o_Aoteroa/GoogleService-Info.plist
+++ b/Travel-o_Aoteroa/GoogleService-Info.plist
@@ -19,18 +19,24 @@
 	<key>STORAGE_BUCKET</key>
 	<string>traveloaoteroa.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:226483566286:ios:6edd1581207508356dc29f</string>
 	<key>DATABASE_URL</key>
 	<string>https://traveloaoteroa.firebaseio.com</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Travelo</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Travelo</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Travelo</string>
 </dict>
 </plist>
